--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,14 +51,16 @@
   margin-left: 30px;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 768px) {
   .header {
+    max-width: 500;
     padding: 20px 30px;
   }
 }
   
 @media screen and (max-width: 450px) {
   .header {
+    max-width: 320px;
     padding: 20px 14px;
   }
   
