--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -96,8 +96,21 @@
   transform: translateX(16px);
 }
 
+@media screen and (max-width: 768px) {
+  .search {
+    max-width: 500px;
+  }
+}
+
 @media screen and (max-width: 450px) {
-  .search__container {
-    width: 45%;
+  .search {
+    max-width: 320px;
+  }
+
+  .search__films {
+    padding-right: 12px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
   }
 }
