--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -32,7 +32,6 @@
     justify-content: space-between;
     max-width: 600px;
     min-height: 327px;
-    margin-right: 70px;
   }
   
   .about-me__name {
@@ -75,18 +74,24 @@
     margin-right: 20px;
   }
   
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 850px) {
     .about-me {
       padding: 90px 50px;
     }
   
     .about-me__photo {
-      width: 246px;
+      width: 255px;
+      height: 315px;
     }
   
+    .about-me__name {
+      font-size: 40px;
+      line-height: 40px;
+    }
+
     .about-me__description-container {
-      min-height: 307px;
-      margin-right: 50px;
+      min-height: 315px;
+      width: 364px;
     }
   
     .about-me__name {
@@ -104,3 +109,91 @@
       line-height: 18px;
     }
   }
+
+  @media screen and (max-width: 750px) {
+    .about-me {
+      padding: 80px 30px;
+    }
+    .about-me__info-container {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .about-me__photo {
+      width: 255px;
+      height: 315px;
+    }
+  
+    .about-me__description-container {
+      min-height: 315px;
+      width: 364px;
+      text-align: center;
+    }
+  
+    .about-me__name {
+      font-size: 40px;
+      line-height: 40px;
+      padding-top: 30px;
+    }
+  
+    .about-me__job {
+      font-size: 12px;
+      line-height: 18px;
+    }
+  
+    .about-me__description {
+      font-size: 12px;
+      line-height: 18px;
+    }
+
+    .about-me__social-links {
+      text-align: center;
+      margin: 0 auto;
+      padding-top: 20px;
+    }
+  }
+
+  @media screen and (max-width: 420px) {
+    .about-me {
+      padding: 60px 30px;
+    }
+    
+    .about-me__info-container {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .about-me__photo {
+      width: 255px;
+      height: 315px;
+    }
+  
+    .about-me__description-container {
+      min-height: 310px;
+      width: 310px;
+      text-align: center;
+    }
+  
+    .about-me__name {
+      font-size: 40px;
+      line-height: 40px;
+      padding-top: 30px;
+    }
+  
+    .about-me__job {
+      font-size: 12px;
+      line-height: 18px;
+    }
+  
+    .about-me__description {
+      font-size: 12px;
+      line-height: 18px;
+    }
+
+    .about-me__social-links {
+      text-align: center;
+      margin: 0 auto;
+      padding-top: 20px;
+    }
+  }
+
