--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -69,9 +69,11 @@
   align-items: flex-start;
   box-sizing: border-box;
   width: 100%;
-  height: 72px;
+  height: 67px;
   margin: 0;
   margin-top: 110px;
+  font-size: 14px;
+  line-height: 17px;
 }
   
 .about-project__time-backend {
@@ -100,10 +102,9 @@
   justify-content: center;
   box-sizing: border-box;
   width: 100%;
-  padding-bottom: 14px;
+  margin-bottom: 14px;
   padding: 9px 0;
   background-color: unset;
-  color: #A0A0A0;
 }
 
 .about-project__time-frontend-item {
@@ -112,23 +113,78 @@
   justify-content: center;
   box-sizing: border-box;
   width: 100%;
-  padding-bottom: 14px;
-  color: #A0A0A0;
-  background-color: unset;
+  margin-bottom: 14px;
   padding: 9px 0;
+  background-color: unset;
 }
   
 .about-project__time-backend-item_1 {
   background-color: #2BE080;
-  color: #000;
 } 
   
 .about-project__time-frontend-item_1 {
-  color: #000;
-  background-color: #F2F2F2;
+  background-color: #e8e8e8;
 }
   
 .about-project__time-item_2 {
-  padding-top: 14px;
-  padding-bottom: 0;
+  color: #A0A0A0;
 } 
+
+@media screen and (max-width: 768px) {
+  .about-project  {
+    padding: 90px 50px;
+  }
+
+  .about-project__info-title {
+    margin-bottom: 22px;
+  }
+
+  .about-project__info-section {
+    width: 319px;
+    margin-left: 30px;
+  }
+
+  .about-project__info-text {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .about-project__time {
+    margin-top: 93px;
+  }
+
+  .about-project__time-backend {
+    max-width: 140px;
+  }
+  
+  .about-project__time-frontend {
+    max-width: 528px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .about-project  {
+    padding: 80px 30px;
+  }
+
+  .about-project__info-title {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: normal;
+  }
+
+  .about-project__time {
+    margin-top: 83px;
+    font-size: 10px;
+    line-height: 12px;
+  }
+
+  .about-project__time-backend {
+    max-width: 150px;
+  }
+  
+  .about-project__time-frontend {
+    max-width: 250px;
+  }
+}
