--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 70px;
+  padding: 0 70px 0 60px;
   min-height: 74px;
   box-sizing: border-box;
 }
@@ -53,14 +53,16 @@
 
 @media screen and (max-width: 768px) {
   .header {
-    max-width: 500;
-    padding: 20px 30px;
+    padding: 0 30px;
+  }
+
+  .logo2 {
+    background: url('../../images/logo3.svg');
   }
 }
   
 @media screen and (max-width: 450px) {
   .header {
-    max-width: 320px;
     padding: 20px 14px;
   }
   
