--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,15 +1,17 @@
 .profile {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  background-color: #fff;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .profile__form {
+  max-width: 410px;
+  margin: 74px auto 220px;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  max-width: 410px;
-  padding: 75px 0 0;
 }
 
 .profile__username {
@@ -21,83 +23,83 @@
 }
 
 .profile__form-fields {
-  display: grid;
-  width: 100%;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 2px;
+  max-width: 410px;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.profile__input-container {
+  max-width: 410px;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0 0 16px;
+  border-bottom: 1px solid #E8E8E8;
+  font-size: 11px;
+  line-height: 1.18;
+}
+.profile__input-container:last-child {
+  margin: 17px 0 0;
+  padding: 0;
+  border: none;
 }
 
 .profile__text {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 0 16px;
-  margin: 0;
-  border-bottom: 1px solid #E8E8E8;
-  font-size: 11px;
+  min-width: 141px;
+  margin: 0 147px 0 0;
   font-weight: 500;
-  line-height: 13px;
 }
-
-.profile__text:first-of-type {
-  grid-row: 1;
-  grid-column: 1;
-}
-
-.profile__text:last-of-type {
-  grid-row: 2;
-  grid-column: 1;
-  padding: 16px 0 0;
-  border: none;
-}
-
 .profile__input {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  border-bottom: 1px solid #E8E8E8;
-}
-
-.profile__input:last-of-type {
-  border: none;
-}
-
-.profile__input_name {
-  grid-row: 1;
-  grid-column: 2;
-}
-
-.profile__input_email {
-  justify-content: flex-end;
-  grid-row: 2;
-  grid-column: 2;
-  padding: 16px 0 0;
-}
-
-.profile__info {
-  width: 100%;
-  margin: 0;
+  min-width: 122px;
+  margin: 0 0 0 auto;
   padding: 0;
-  outline: none;
+  font-weight: 400;
+  text-align: right;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0);
   border: none;
-  text-align: end;
+  outline: none;
+}
+.profile__input:focus {
+  border-bottom: 1px solid #3456F3;
+}
+.profile__input::placeholder {
+  font-weight: 400;
   font-size: 11px;
   line-height: 13px;
+  color: #000000;
+}
+.profile__input-error {
+  margin: 6px 0 0;
+  padding-bottom: 0;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.2;
+  color: #EE3465;
 }
 
-.profile__button {
-  margin: 220px 0 16px;
+.profile__button  {
+  margin: 0 auto 16px;
+  min-width: 410px;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 1.23;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+}
+.profile__sign-out {
+  margin: 0 auto 70px;
+  min-width: 410px;
+  text-decoration: none;
+  font-weight: 500;
   font-size: 13px;
   line-height: 16px;
   text-align: center;
-  background-color: transparent;
-  color: #000;
-}
-
-.profile__link {
-  color: #FF004d;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 16px;
+  color: #ff004d;
 }
 
 @media all and (max-width: 768px) {
