--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -106,7 +106,7 @@
     width: 100%;
   }
   
-  .form__button_padding {
+  .form__button_login {
     margin-top: 169px;
   }
 
@@ -122,6 +122,20 @@
     color: #a0a0a0;
     font-size: 14px;
     line-height: 17px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .form {
+      padding: 232px 0 0;
+    }
+
+    .form__field {
+      line-height: 16px;
+    }
+
+    .form__button_login {
+      margin-top: 139px;
+    }
   }
   
  
