--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -137,5 +137,33 @@
       margin-top: 139px;
     }
   }
-  
+    
+    @media screen and (max-width: 750px) {
+      .form {
+        padding: 56px 30px 0;
+      }
+
+      .form__container {
+        align-items: center;
+      }
+      .form__title { 
+        margin: 50px 0 80px;
+      }
+
+      .form__button_login {
+        margin-top: 267px;
+      }
+
+      .form__button {
+        margin:157px 0 14px;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 15px;
+      }
+
+      .form__text {
+        font-size: 12px;
+        line-height: 15px;
+      }
+    }
  
