--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -1,30 +1,33 @@
 .not-found {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 100%;
-  height: 100vh;
-  box-sizing: border-box;
-  padding: 246px 0 60px;
-  text-align: center;
+  padding: 0;
+  margin: 0 auto;
 }
 
 .not-found__container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .not-found__title {
-  margin: 0;
+  margin: 246px auto 5px;
+  padding: 0;
   font-size: 140px;
   font-weight: 400;
   line-height: 169px;
+  text-align: center;
+  max-width: 400px;
 }
 
 .not-found__text {
-  margin: 5px 0 0;
+  margin: 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
+  text-align: center;
 }
 
 .not-found__link {
@@ -32,32 +35,39 @@
   color: #3456F3;
   font-size: 14px;
   line-height: 17px;
-  align-self: center;
+  text-align: center;
+  margin: 184px auto 60px;
+  max-width: 42px;
 }
 
-@media screen and (max-width: 768px) {
- .not-found__link {
-    margin-top: 184px;
+@media screen and (max-width: 900px) {
+  .not-found__title {
+    margin: 408px auto 5px;
+  }
+
+  .not-found__link {
+    margin: 184px auto 222px;
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
   .not-found__link {
-    margin-top: 120px;
+    padding: 329px 0 30px;
   }
 
   .not-found__title {
+    margin: 329px auto 10px;
     font-size: 80px;
     line-height: 97px;
   }
 
   .not-found__text {
-    margin-top: 10px;
     font-size: 12px;
     line-height: 15px;
   }
 
   .not-found__link {
+    margin: 284px auto 30px;
     font-size: 12px;
     line-height: 15px;
   }
