--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,6 @@
 .profile {
   display: flex;
   flex-direction: column;
-  background-color: #fff;
   padding: 0;
   max-width: 1280px;
   margin: 0 auto;
@@ -115,11 +114,16 @@
 @media screen and (max-width: 500px) {
   .profile__form {
     max-width: 260px;
-    margin: 0 auto 379px;
+    margin: 40px auto 379px;
   }
 
   .profile__form-fields {
     max-width: 260px;
+  }
+
+  .profile__username {
+    margin: 0 0 80px;
+    line-height: 29px;
   }
 
   .profile__input-container {
@@ -138,13 +142,13 @@
   .profile__button {
     min-width: 300px;
     font-size: 12px;
-    line-height: 1.25;
+    line-height: 15px;
   }
 
   .profile__sign-out {
     margin: 0 auto 40px;
     min-width: 300px;
     font-size: 12px;
-    line-height: 1.25;
+    line-height: 15px;
   }
 }
