--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -26,6 +26,12 @@
   border: none;
 }
 
+.search__input:focus {
+  outline: 1px solid rgba(61, 220, 132, 1);
+  border-radius: 50px;
+  width: 60%;
+}
+
 .search__input::placeholder {
   color: #a0a0a0;
 }
@@ -115,12 +121,25 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 650px) {
+  .search {
+    padding: 60px 0 44px;
+    max-width: 580px;
+  }
+
   .search__films {
     padding-right: 12px;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 400;
-    line-height: 15px;
+    line-height: 18px;
+  }
+
+  .search__container {
+    margin: 0 0 45px;
+  }
+
+  .search__toggle {
+    margin: 0;
   }
 
   .search__button {
