--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,6 +2,13 @@
   padding: 0 70px;
 }
 
+.movies__title {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 400;
+  padding-bottom: 20px;
+}
+
 @media screen and (max-width: 768px) {
   .movies {
     padding: 0 30px;
