--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -111,6 +111,11 @@
     margin-top: 169px;
   }
 
+  .form__button_login_inactive {
+    opacity: .2;
+    cursor: default;
+  }
+
   .form__button:hover {
     opacity: 0.6;
     cursor: pointer;
