--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -76,12 +76,15 @@
 }
 
 .profile__input-error {
-  margin: 6px 0 0;
   padding-bottom: 0;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.2;
   color: #EE3465;
+}
+
+.profile_span {
+  margin-bottom: 10px;
 }
 
 .profile__button  {
@@ -93,6 +96,11 @@
   align-items: center;
   text-align: center;
   color: #000000;
+}
+
+.profile__button_inactive {
+  opacity: 0.4;
+  cursor: unset;
 }
 
 .profile__sign-out {
