--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -76,11 +76,11 @@
 }
 
 .profile__input-error {
-  padding-bottom: 0;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 1.2;
-  color: #EE3465;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  color: #ff004c;
 }
 
 .profile_span {
