--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -105,9 +105,13 @@
   .form__response {
     display: flex;
     justify-content: center;
-    margin: 80px auto 20px;
+    margin: 10px 0;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
+    height: 10px;
   }
-
+  
   .form__button {
     margin: 69px 0 17px;
     padding: 13px 0 15px;
